statement and search bar padding fix to resrict white space

--- a/static/css/custom.css
+++ b/static/css/custom.css
@@ -92,7 +92,8 @@
 /*------------------------------------Body*/
 
 .statement {
-    font-size: 25px;
+    padding-top: 15px;
+    font-size: 20px;
     font-weight: bolder;
     font-family: 'Kanit', sans-serif;
     color: #E2AA72;
@@ -104,7 +105,7 @@
 #search-bar {
     text-align: center;
     display: block;   
-    padding-bottom: 10px;
+    padding-bottom: 5px 0px 0px 10px;
 }
 
 /* Input for search bar */
